show issue detail modal on issue query on mobile

--- a/src/app/repository/issue-query-page/issue-query-page.scss
+++ b/src/app/repository/issue-query-page/issue-query-page.scss
@@ -15,6 +15,11 @@
   overflow: auto;
   max-width: 30%;
 
+  :host.is-mobile & {
+    width: 100%;
+    max-width: 100%;
+  }
+
   .issue {
     padding: 16px;
     font-size: 14px;
